--- a/Dice_Game/style.css
+++ b/Dice_Game/style.css
@@ -1,10 +1,24 @@
 main{
     display: flex;
+    text-align: center;
+    justify-content: space-between;
+    max-width: 500px;
+    margin: auto;
 }
 
 img{
     border: 1px solid black;
     display: none;
+    width: 200px;
+}
+
+.card{
+    padding: 20px;
+}
+
+.dices{
+    min-height: 500px;
+
 }
 
 .visible{
